--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,8 +58,14 @@ dependencies {
     //Coil
     implementation("io.coil-kt:coil:0.6.1")
 
-    //Firebase
+    //Firebase services
     implementation platform('com.google.firebase:firebase-bom:30.2.0')
+
+    //Firebase authentication
+    implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
+
+    //Firebase RealtimeDatabase
+    implementation 'com.google.firebase:firebase-database-ktx'
 
     //Picasso
     implementation "com.squareup.picasso:picasso:$picasso"
