--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
 dependencies {
 
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.6'
     def picasso = "2.71828"
 
 
